kube/deploy/apps/authentik/forward-auth/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${AUTHENTIK_PROXY_HOST//./-}-authentik
  namespace: authentik
spec:
  ingressClassName: "${INGRESS_CLASS:=nginx-internal}"
  rules:
    - host: &host "${AUTHENTIK_PROXY_HOST:=authentik}"
      http:
        paths:
          - pathType: Prefix
            path: "/outpost.goauthentik.io"
            backend:
              service:
                name: authentik
                port:
                  name: http
  tls:
    - hosts:
        - *host
